--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "vlojek",
   "name": "fcc-learn-npm-package-json",
+  "description": "Baby project :D",
   "dependencies": {
     "express": "^4.14.0"
   },
