--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "author": "vlojek",
   "name": "fcc-learn-npm-package-json",
   "description": "Baby project :D",
+  "keywords": [
+    "descriptive",
+    "related",
+    "words"
+  ],
   "dependencies": {
     "express": "^4.14.0"
   },
