--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "fcc-learn-npm-package-json",
   "description": "Baby project :D",
   "keywords": [
-    "descriptive",
+    "freecodecamp",
     "related",
     "words"
   ],
