--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "words"
   ],
   "dependencies": {
-    "express": "^4.14.0",
-    "moment": "^2.10.2"
+    "express": "^4.14.0"
   },
   "main": "server.js",
   "scripts": {
